fix attacks overflow

--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -58,11 +58,11 @@
 .list-item .detail .type-wrapper .type.small {
   height: 14px;
   line-height: 14px;
-  font-size: 8px;
+  font-size: 10px;
 }
 
 .state-wrapper {
-  margin-top: 6px;
+  margin-top: 1px;
   width: 100%;
   margin-bottom: 1px;
 }
@@ -170,4 +170,9 @@
   border-radius: 3px;
   margin-right: 3px;
   padding: 0px 3px;
+}
+
+.attack-wrapper .value {
+  min-width: 420px;
+  flex-wrap: wrap;
 }
